--- a/workflows/ci.yml
+++ b/workflows/ci.yml
@@ -1,7 +1,48 @@
 name: 'Continuous Integration'
 
 on:
-  ...
+  workflow_dispatch:
+  push:
+    branches:
+      - "main"
 
 jobs:
-  ...
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
+      - name: Install requirements
+        run: |
+          python -m pip install -r requirements.txt -r requirements-dev.txt -r requirements-test.txt
+      - name: Run tests
+        env:
+          MODE: "github actions"
+        run: |
+          make model-test
+          make api-test
+  build:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - id: 'auth'
+        name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@v1'
+        with:
+          credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
+      - name: Build container image
+        run: |
+            docker build -f Dockerfile -t latam-challenge .
+            docker tag latam-challenge ${{ secrets.CONTAINER_IMAGE_URL }}:latest
+            gcloud auth configure-docker ${{ secrets.GCLOUD_REGION }}-docker.pkg.dev
+            docker push ${{ secrets.CONTAINER_IMAGE_URL }} --all-tags
