--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   deploy:
+    if: github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.outputs.ci-status == 'success'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
